@@ -1,3 +1,9 @@
+zg 11.10.2016 18:16:57 +0200 - build 4820
+
+1. уточнение 4818: при нажатии enter на панели multiarc задавался вопрос на распаковку.
+
+2. уточнение 4818: аналогичное поведение для запуска по enter встроенных ассоциаций.
+
 drkns 10.10.2016 23:09:35 +0200 - build 4819
 
 1. Сократим немного копипасту в проверке времени изменения файла.
